# vector_au2025_ugvc

./: README.md
victor_/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
victor_/install/send_vel/lib/send_vel/: diff_driver
victor_/install/send_vel/share/send_vel/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
victor_/install/victor/lib/victor/: serial_cmd_vel_bridge.py
victor_/install/victor/share/victor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
victor_/install/victor_motion/lib/victor_motion/: pure_pursuit
victor_/install/victor_motion/share/victor_motion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
victor_/install/victor_nav/share/victor_nav/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
victor_/install/victor_planning/lib/victor_planning/: OccupancyGrid_pub  a_star_planner  rviz_goal_curve_path_publisher  simple_curve_path_publisher  (+1 more)
victor_/install/victor_planning/share/victor_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
victor_/log/: latest_build
victor_/src/send_vel/: setup.py
victor_/src/send_vel/send_vel/: diff_driver.py
victor_/src/victor_motion/: setup.cfg  setup.py
victor_/src/victor_motion/victor_motion/: pure_pursuit.py
victor_/src/victor_planning/: setup.cfg  setup.py
victor_/src/victor_planning/victor_planning/: OccupancyGrid_pub.py  rviz_goal_curve_path_publisher.py
(+18 files in other folders)
