<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>victor_planning</name>
  <version>0.0.1</version>
  <description>Waypoint navigation and planning scripts for Victor robot.</description>
  <maintainer email="anaalbakatoshy@gmail.com">abood</maintainer>
  <license>Apache License 2.0</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <!-- Python libraries (installed via pip, listed for clarity) -->
  <exec_depend>cv_bridge</exec_depend> <!-- Used if your code uses camera data -->
  <exec_depend>opencv-python</exec_depend> <!-- For cv2 -->
  <exec_depend>numpy</exec_depend>

  <!-- Build and test tools -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
